Fixed script directory

--- a/mail.html
+++ b/mail.html
@@ -81,8 +81,8 @@
 </div>
 
 
-    <script src="/src/js/heart-button.js"></script>
-    <script src="/src/js/atoms.js"></script>
+    <script src="/js/atoms.js"></script>
+    <script src="/js/heart-button.js"></script>
 </body>
 
 </html>
