--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Only one white card container -->
         <div class="relative p-6 sm:p-8 bg-green-50 rounded-2xl shadow-xl text-center max-w-sm sm:max-w-md mx-4 z-10 font-quicksand">
             <button data-modal-target="static-modal" data-modal-toggle="static-modal" class="focus:outline-none">
-            <img src="/public/mail-heart.svg" alt="mail-closed-heart" class="w-16 h-16 mx-auto mb-2">
+            <img src="./public/mail-heart.svg" alt="mail-closed-heart" class="w-16 h-16 mx-auto mb-2">
             <p class="font-semibold text-xl text-gray-800">Tap me</p>
             </button>
         </div>
@@ -81,8 +81,8 @@
 </div>
 
 
-    <script src="/js/atoms.js"></script>
-    <script src="/js/heart-button.js"></script>
+    <script src="./js/atoms.js"></script>
+    <script src="./js/heart-button.js"></script>
 </body>
 
 </html>
