--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Quicksand:wght@300..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.net.min.js"></script>
@@ -21,6 +25,7 @@
                     fontFamily: {
                         quicksand: ["Quicksand", "sans-serif"],
                         worksans: ["Work Sans", "sans-serif"],
+                        cormorant: ["Cormorant Garamond", "serif"],
                     }
                 }
             }
@@ -31,54 +36,57 @@
 <body class="bg-green-100 flex items-center justify-center min-h-screen relative">
     <div id="vanta-bg" class="w-full h-screen flex items-center justify-center">
         <!-- Only one white card container -->
-        <div class="relative p-6 sm:p-8 bg-green-50 rounded-2xl shadow-xl text-center max-w-sm sm:max-w-md mx-4 z-10 font-quicksand">
+        <div
+            class="relative p-6 sm:p-8 bg-green-50 rounded-2xl shadow-xl text-center max-w-sm sm:max-w-md mx-4 z-10 font-quicksand">
             <button data-modal-target="static-modal" data-modal-toggle="static-modal" class="focus:outline-none">
-            <img src="./public/mail-heart.svg" alt="mail-closed-heart" class="w-16 h-16 mx-auto mb-2">
-            <p class="font-semibold text-xl text-gray-800">Tap me</p>
+                <img src="./public/mail-heart.svg" alt="mail-closed-heart" class="w-16 h-16 mx-auto mb-2">
+                <p class="font-semibold text-xl text-gray-800">Tap me</p>
             </button>
         </div>
     </div>
-    <div id="static-modal"
-     data-modal-backdrop="static"
-     tabindex="-1"
-     aria-hidden="true"
-     class="hidden fixed inset-0 z-50 items-center justify-center w-full h-full transition-opacity duration-300">
-    
-    <div class="relative p-4 w-full max-w-2xl">
-        <!-- Modal content -->
-        <div id="modal-content"
-             class="relative bg-white rounded-lg shadow-lg transform transition-all duration-300 scale-95 opacity-0">
-            
-            <!-- Modal header -->
-            <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t border-gray-200">
-                <h3 class="text-xl font-semibold text-gray-900">
-                    Hi User
-                </h3>
-                <button type="button"
+    <div id="static-modal" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
+        class="hidden fixed inset-0 z-50 items-center justify-center w-full h-full transition-opacity duration-300">
+
+        <div class="relative p-4 w-full max-w-2xl">
+            <!-- Modal content -->
+            <div id="modal-content"
+                class="relative bg-green-100 rounded-lg shadow-lg transform transition-all duration-300 scale-95 opacity-0">
+
+                <!-- Modal header -->
+                <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t border-gray-200">
+                    <h3 class="text-2xl font-bold text-gray-900 font-cormorant italic">
+                        Hi Ruby Anne!
+                    </h3>
+                    <button type="button"
                         class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
                         data-modal-hide="static-modal">
-                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-                    </svg>
-                    <span class="sr-only">Close modal</span>
-                </button>
-            </div>
+                        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 14 14">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                        </svg>
+                        <span class="sr-only">Close modal</span>
+                    </button>
+                </div>
 
-            <!-- Modal body -->
-            <div class="p-4 md:p-5 space-y-4">
-                <p class="text-base leading-relaxed text-black">
-                    With less than a month to go before the European Union enacts new consumer privacy laws for its citizens,
-                    companies around the world are updating their terms of service agreements to comply.
-                </p>
-                <p class="text-base leading-relaxed text-black">
-                    The European Union’s General Data Protection Regulation (G.D.P.R.) goes into effect on May 25 and is meant
-                    to ensure a common set of data rights in the European Union. It requires organizations to notify users as
-                    soon as possible of high-risk data breaches that could personally affect them.
-                </p>
+                <!-- Modal body -->
+                <div class="p-4 md:p-5 space-y-4">
+                    <p class="text-base leading-relaxed text-black font-quicksand font-normal">
+                        Good day, hope you still remember me! 😅 It's been a long time since elem. I'll keep this short and not awkward to you.
+                        I just want to be honest. I've liked you for quite some time. 
+                        Not really expecting anything, I just wanted to express how I feel. I'd like to get to know you better if you're open to it. If not, no worries at all. 
+                        Just thought I should let you know and please don't pressure yourself to give a reply🙂 Take care always and stay pretty!
+                    </p>
+                    <p class="text-base leading-relaxed text-black font-quicksand font-normal">
+                        If you've read this far, thank you! 💚
+                    </p>
+                    <p class="items-end text-right">
+                        <img src="./public/demon-slayer.svg" alt="" class="w-24 h-24 inline-block">
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 
     <script src="./js/atoms.js"></script>
@@ -86,4 +94,3 @@
 </body>
 
 </html>
-
