fixed message content

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./public/favicon-32x32.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💚</title>
-    <!-- Tailwind CDN -->
+    <title>T_T</title>
+    <!-- Libraries & Frameworks -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -53,7 +54,7 @@
                 class="relative bg-green-100 rounded-lg shadow-lg transform transition-all duration-300 scale-95 opacity-0">
 
                 <!-- Modal header -->
-                <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t border-gray-200">
+                <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t border-gray-200 bg-green-200">
                     <h3 class="text-2xl font-bold text-gray-900 font-cormorant italic">
                         Hi Ruby Anne!
                     </h3>
@@ -72,17 +73,28 @@
                 <!-- Modal body -->
                 <div class="p-4 md:p-5 space-y-4">
                     <p class="text-base leading-relaxed text-black font-quicksand font-normal">
-                        Good day, hope you still remember me! 😅 It's been a long time since elem. I'll keep this short and not awkward to you.
-                        I just want to be honest. I've liked you for quite some time. 
-                        Not really expecting anything, I just wanted to express how I feel. I'd like to get to know you better if you're open to it. If not, no worries at all. 
-                        Just thought I should let you know and please don't pressure yourself to give a reply🙂 Take care always and stay pretty!
+                        Good day! I hope you still remember me 😅 It’s been a long time since elementary. 
+                        I’ll keep this short — not to bother you. This might sound unexpected, but I just want to be honest.
                     </p>
                     <p class="text-base leading-relaxed text-black font-quicksand font-normal">
-                        If you've read this far, thank you! 💚
+                        I’ve liked you for quite some time now. It happened unexpectedly, and I couldn’t help it. 
+                        I’m not expecting anything, I just wanted to let you know how I feel. If you’re open to it, 
+                        I’d love to get to know you better. If not, no worries at all — please don’t feel pressured to reply 🙂
                     </p>
-                    <p class="items-end text-right">
-                        <img src="./public/demon-slayer.svg" alt="" class="w-24 h-24 inline-block">
+                    <p class="text-base leading-relaxed text-black font-quicksand font-normal">
+                        Take care always, and stay as pretty and smart as you are 💚
                     </p>
+                    <p class="text-base leading-relaxed text-black font-quicksand font-normal">
+                        Thanks for reading this far!
+                    </p>
+                    <div class="flex items-center justify-end space-x-2 text-right">
+                        <p class="font-quicksand text-xl">
+                            — Johnlyn
+                        </p>
+                        <img src="./public/demon-slayer.svg" alt="" class="w-24 h-24">
+                    </div>
+                        
+                   
                 </div>
             </div>
         </div>
