--- a/404.html
+++ b/404.html
@@ -6,10 +6,15 @@
   <title>404 Not Found</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-green-100 flex items-center justify-center min-h-screen">
+<body class="bg-green-100 flex items-center justify-center min-h-screen p-4">
   <div class="text-center">
-    <h1 class="text-9xl sm:text-2xl font-bold text-gray-800">404</h1>
-    <p class="text-2xl sm:text-2xl md:text-3xl font-light text-gray-600 mb-8">
+    <!-- Heading scales with screen size -->
+    <h1 class="text-6xl sm:text-7xl md:text-8xl lg:text-9xl font-bold text-gray-800">
+      404
+    </h1>
+
+    <!-- Subheading scales too -->
+    <p class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-light text-gray-600 mt-4">
       Oops! Please contact the owner for access.
     </p>
   </div>
